# DAGRiderTest

./: .gitignore
scripts/: bash.sh  check-trace-auto.py  check-trace-auto.sh  check-trace.py  check-trace.sh  gen-test.sh  test.txt
spec/constant-trick/: DAGRider.tla  LeaderConsensusSpecification.tla  MC.cfg  MC.tla  MCtmp.tla  SequenceOps.tla
spec/no-state-merge/: DAGRider.tla  LeaderConsensusSpecification.tla  MC.cfg  MC.tla
spec/original/: DAGRider.tla  LeaderConsensusSpecification.tla  SequenceOps.tla
src/fuzzer/: Cargo.toml  TLC_log_1720676502
src/fuzzer/fuzz/: Cargo.toml  dico.txt  rustc-ice-2024-07-09T06_53_06-68808.txt
src/fuzzer/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_simplify.rs
src/fuzzer/src/: environment.rs  lib.rs
src/impl/consensus/: Cargo.toml
src/impl/consensus/src/: dag.rs  lib.rs  state.rs
src/impl/model/: Cargo.toml
src/impl/model/src/: block.rs  committee.rs  lib.rs  vertex.rs
src/impl/transaction/src/: transaction_coordinator.rs
src/impl/vertex/src/: vertex_broadcaster.rs  vertex_coordinator.rs  vertex_message_handler.rs
src/parser/: Cargo.toml  build.rs
src/parser/src/: calc.l  calc.y  lib.rs  varcontent.l  varcontent.y
src/test/: Cargo.toml
src/test/src/: environment.rs  main.rs
